--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pretest": "eslint --ignore-path .gitignore .",
     "prestart": "npm run -s build",
     "start": "node dist/index.js",
-    "dev": "nodemon index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "clean": "rm -rf dist",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "nyc --reporter=text  mocha --require babel-register --require dotenv/config --timeout 10000 --exit",
     "posttest": "nyc check-coverage --lines 50 --functions 50 --branches 50 "
